  17. <VARIES> tags in room descriptions now includes a Zappermask option -- see the Archon's Guide.
  18. Journal entries, including those with embedded replies, can be edited from the MUDGrinder.
  19. MUDGRinder: Mobs can now be added and edited directly in ShopKeeper inventory
  20. Clans can restrict their lower ranks from certain rooms with clan ward and improved clan ward spells.
  21. Version command now shows system up time.
  22. New DISABLE flag: languages
  23. Clans hostile to each other can attack each others controlled areas.
  24. Clans friendly/ally with each other gain certain home privileges in each others clan halls.
  25. Faithhelper, Racehelper, Alignhelper, and Playerhelper all now support max combatants argument.
  26. Eight new Clan Trophies added, including several Monthly awards. Check the INI file changes!
  27. Clans with no activity in the previous month will go into an informative Stagnant/Inactive status.
  28. Archons can now Stat Clan "clanname", so see current and monthly statistics on a clan
  29. Clan Governments now support miscellaneous variables.  Right now, TAX is the only supported one.
  30. Can now craft Clan Tabbards, for extra clan experience granting.
  31. Clan Governments now support custom titles per type, and each position can also support their own titles.
  32. Clans can now be tattooed
  33. Clans now have their own set of achievements, see achivements in MG or achievements.ini for more info.
  34. New account achievement: characters, to create achievements for creating more characters
  35. Can now CLANACCEPT ALL, also CLANACCEPT with no arguments lists applicants.  Ditto CLANREJECT

# Build 5.9.7 Release 08/29/2018
   1. Scholars gain XP from visiting bookstores, and can study dissertations.
   2. A lot of the old static strings in rideables are now customizable by editors, Shipwright/Wainwright
   3. Small boats can TENDER themselves to large ships now, and be RAISEd and LOWERd.