@@ -19,7 +19,7 @@
   18. Journal entries, including those with embedded replies, can be edited from the MUDGrinder.
   19. MUDGRinder: Mobs can now be added and edited directly in ShopKeeper inventory
   20. Clans can restrict their lower ranks from certain rooms with clan ward and improved clan ward spells.
-  21. Version command now shows system up time.
+  21. Version command now shows system up time, and scheduled shutdown time.
   22. New DISABLE flag: languages
   23. Clans hostile to each other can attack each others controlled areas.
   24. Clans friendly/ally with each other gain certain home privileges in each others clan halls.
@@ -34,6 +34,8 @@
   33. Clans now have their own set of achievements, see achivements in MG or achievements.ini for more info.
   34. New account achievement: characters, to create achievements for creating more characters
   35. Can now CLANACCEPT ALL, also CLANACCEPT with no arguments lists applicants.  Ditto CLANREJECT
+  36. New command: CLANMOTD - for setting a login news message for clan members
+  37. CLANWHO can now get used to get clan member information
 
 # Build 5.9.7 Release 08/29/2018
    1. Scholars gain XP from visiting bookstores, and can study dissertations.
